# deepmonadcomp

./: 0001-Add-overloaded-version-of-Control.Monad.guard.patch  0002-Desugar-monad-comprehension-guard-into-aguard.patch  DeepMonadComp.hs  Internals.hs  Internals3.hs  Internals4.hs  deepmonadcomp.cabal  notes.md
