name:                deepmonadcomp
version:             0.1.0.0
synopsis:            A deep embedding of monad comprehensions
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Alexander Ulrich
maintainer:          alex@etc-network.de
-- copyright:           
category:            Database
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     DeepMonadComp
  -- other-modules:       
  other-extensions:    FlexibleContexts, FlexibleInstances, GADTs, MonadComprehensions, TypeFamilies
  build-depends:       base >=4.9, constrained-normal >=1.0 && <1.1, transformers >=0.4
  -- hs-source-dirs:      
  default-language:    Haskell2010
